--- a/guessing-game.html
+++ b/guessing-game.html
@@ -7,12 +7,15 @@ wrongAnswer = ("sandwiches");
 rightAnswer1 = ("sandwich");
 
 question1 = prompt("Guess what I had for breakfast today.").toLowerCase()
-	if (question1==rightAnswer1) {
-		prompt("Amazing! You guessed it right!")
-	} else if(question1==wrongAnswer) {
-		alert("I only had one sandwich though. More than one sandwich for breakfast makes you way too full! Why don't you refresh and try again.")
-	} else{
-		alert("Nope. Hint: I had mayo, lettuce, cucumber and ham between two pieces of bread. Now guess again by refreshing.")
-	};
-	
+
+		while (question1 != rightAnswer1){
+			if(question1 == wrongAnswer) {
+				var question1 = prompt("I only had one sandwich though. More than one sandwich for breakfast makes you way too full! Why don't you try again.");
+			}
+		else {question1 = prompt("Nope. Hint: I had mayo, lettuce, cucumber and ham between two pieces of bread. Why don't you try again.");
+		}
+		};
+		
+	alert("Amazing! You guessed it right!");
+
 </script>
