change prompt into alert

--- a/guessing-game.html
+++ b/guessing-game.html
@@ -8,7 +8,7 @@ rightAnswer1 = ("sandwich");
 
 question1 = prompt("Guess what I had for breakfast today.").toLowerCase()
 	if (question1==rightAnswer1) {
-		prompt("Amazing! You guessed it right!")
+		alert("Amazing! You guessed it right!")
 	} else if(question1==wrongAnswer) {
 		alert("I only had one sandwich though. More than one sandwich for breakfast makes you way too full! Why don't you refresh and try again.")
 	} else{
